--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Assessment Results</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='modern-style.css') }}">
 </head>
 <body>
     <div class="container">
