--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Assessment - Create Assessment</title>
+    <title>GENIUS - Create Assessment</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='modern-style.css') }}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -369,7 +369,7 @@
         <header>
             <div class="logo-container">
                 <div class="logo-icon"><i class="fas fa-brain"></i></div>
-                <h1>Smart<span>Assessment</span></h1>
+                <h1><span>GENIUS</span></h1>
             </div>
         </header>
 
