--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -14,7 +14,7 @@
         <header>
             <div class="logo-container">
                 <div class="logo-icon"><i class="fas fa-brain"></i></div>
-                <h1>Smart<span>Assessment</span></h1>
+                <h1><span>GENIUS</span></h1>
             </div>
             <div class="progress-container">
                 <div class="progress-bar">
